--- a/src/blok-haus.pug
+++ b/src/blok-haus.pug
@@ -20,27 +20,58 @@ block product
                     tr
                         th Размер, мм
                         th Качество
-                        th Цена за лист
+                        th Цена за м2
                     tr
                         td 28х140х6000
-                        td ЭКСТРА
-                        td.price 433 руб.
+                        td А
+                        td.price 435 руб.
                     tr
                         td 35х140х6000
-                        td ЭКСТРА
-                        td.price 518 руб.
+                        td А
+                        td.price 515 руб.
                     tr
                         td 36х190х6000
-                        td ЭКСТРА
-                        td.price 518 руб.
+                        td А
+                        td.price 550 руб.
                     tr
                         td 45х190х6000
-                        td ЭКСТРА
-                        td.price 637 руб.
+                        td А
+                        td.price 620 руб.
                     tr
                         td 45х240х6000
-                        td ЭКСТРА
-                        td.price 663 руб.
+                        td А
+                        td.price 690 руб.
+
+    .table
+        .table__title Блок Хаус
+        .table__wrap
+            table
+                tbody
+                    tr
+                        th Размер, мм
+                        th Качество
+                        th Цена за м2
+                    tr
+                        td 28х140х6000
+                        td В
+                        td.price 390 руб.
+                    tr
+                        td 35х140х6000
+                        td В
+                        td.price 420 руб.
+                    tr
+                        td 36х190х6000
+                        td В
+                        td.price 450 руб.
+                    tr
+                        td 45х190х6000
+                        td В
+                        td.price 530 руб.
+                    tr
+                        td 45х240х6000
+                        td В
+                        td.price 580 руб.
+
 
     h3.article__title Производство блок хауса
 
