--- a/src/brikety.pug
+++ b/src/brikety.pug
@@ -12,8 +12,7 @@ block product
         img(class="gallery__item" src="img/Брикеты большие фото/Брикеты 3 (большое фото).jpg")
         img(class="gallery__item" src="img/Брикеты большие фото/Брикеты 4 (большое фото).jpg")
 
-    .table.table_big#terrasnaya-doska-iz-listvennicy-velvet
-        .table__title Вельвет
+    .table.table_big
         .table__wrap
             table
                 tbody
@@ -24,24 +23,24 @@ block product
                     tr
                         td RUF береза пыль
                         td упаковка по 10 кг
-                        td.price 5950 руб.
+                        td.price 6599 руб.
                     tr
                         td RUF береза опилки+пыль
                         td упаковка по 10 кг
-                        td.price 6035 руб.
+                        td.price 6799 руб.
                     tr
                         td RUF хвоя опилки
                         td упаковка по 10 кг
-                        td.price 4930 руб.
+                        td.price 5999 руб.
                     tr
                         td Торфяные брикеты
                         td упаковка по 10 кг
-                        td.price 4675 руб.
+                        td.price 4999 руб.
                     tr
                         td Pini-Kay (береза)
                         td упаковка по 10 кг
-                        td.price 6120 руб.
+                        td.price 6999 руб.
                     tr
                         td NESTRO
                         td упаковка по 10 кг
-                        td.price 6290 руб.
+                        td.price 6299 руб.
