--- a/src/brus-obreznoi.pug
+++ b/src/brus-obreznoi.pug
@@ -11,7 +11,7 @@ block product
             a(class="link-spy spyLinks__link" href="#brus-obreznoi-gost") Брус обрезной ГОСТ
         .spyLinks__item
             img(class="spyLink__img" src="img/picture-brus-obreznoi-6.jpg")
-            a(class="link-spy spyLinks__link" href="#brus-obreznoi-ty") Брус обрезной ТУ
+            a(class="link-spy spyLinks__link" href="#brus-obreznoi-ty") Брус обрезной сухой
     .product__gallery.gallery.flex_row__center.flex_wrap
         img(class="gallery__item" src="img/picture-brus-obreznoi-1.jpg")
         img(class="gallery__item" src="img/picture-brus-obreznoi-2.jpg")
@@ -60,45 +60,45 @@ block product
                         td.price 7225 руб.
 
     .table#brus-obreznoi-ty
-        .table__title брус обрезной ТУ
+        .table__title брус обрезной сухой
         .table__wrap
             table
                 tbody
                     tr
                         th Размер, мм
-                        th Качество
+                        th Влажность
                         th Штук в м3
                         th Цена за м3
                     tr
                         td 100х100х6000
-                        td ТУ
+                        td 8-12%
                         td 16
-                        td.price 6205 руб.
+                        td.price 8950 руб.
                     tr
                         td 100х150х6000
-                        td ТУ
+                        td 8-12%
                         td 11
-                        td.price 6205 руб.
+                        td.price 8950 руб.
                     tr
                         td 100х200х6000
-                        td ТУ
+                        td 8-12%
                         td 8
-                        td.price 6205 руб.
+                        td.price 8950 руб.
                     tr
                         td 150х150х6000
-                        td ТУ
+                        td 8-12%
                         td 7
-                        td.price 6205 руб.
+                        td.price 8950 руб.
                     tr
                         td 150х200х6000
-                        td ТУ
+                        td 8-12%
                         td 5
-                        td.price 6205 руб.
+                        td.price 8950 руб.
                     tr
                         td 200х200х6000
-                        td ТУ
+                        td 8-12%
                         td 4
-                        td.price 6375 руб.
+                        td.price 8950 руб.
 
 
     h3.article__title Достоинства обрезного бруса
