--- a/src/doska-obreznaya.pug
+++ b/src/doska-obreznaya.pug
@@ -12,9 +12,9 @@ block product
         .spyLinks__item
             img(class="spyLink__img" src="img/Доска обрезная маленькие фото/Доска обрезная 2 сорт ГОСТ.jpg")
             a(class="link-spy spyLinks__link" href="#doska-obreznaya-osina") Доска обрезная осина
-        .spyLinks__item
-            img(class="spyLink__img" src="img/Доска обрезная маленькие фото/Доска обрезная 2 сорт ТУ.jpg")
-            a(class="link-spy spyLinks__link" href="#doska-obreznaya-2-j-sort") Доска обрезная 2-й сорт
+        //.spyLinks__item
+        //    img(class="spyLink__img" src="img/Доска обрезная маленькие фото/Доска обрезная 2 сорт ТУ.jpg")
+        //    a(class="link-spy spyLinks__link" href="#doska-obreznaya-2-j-sort") Доска обрезная 2-й сорт
 
     .product__gallery.gallery.flex_row__center.flex_wrap
         img(class="gallery__item" src="img/Доска обрезная большое фото/Доска обрезная 1 (большое фото).jpg")
@@ -36,49 +36,49 @@ block product
                         th Цена за м3
                     tr
                         td 25х100х6000
-                        td ТУ
+                        td 8-12%
                         td 66
-                        td.price 6205 руб.
+                        td.price 8550 руб.
                     tr
                         td 25х150х6000
-                        td ТУ
+                        td 8-12%
                         td 44
-                        td.price 6205 руб.
+                        td.price 8550 руб.
                     tr
                         td 25х200х6000
-                        td ТУ
+                        td 8-12%
                         td 33
-                        td.price 6205 руб.
+                        td.price 8550 руб.
                     tr
                         td 40х100х6000
-                        td ТУ
+                        td 8-12%
                         td 41
-                        td.price 6205 руб.
+                        td.price 8550 руб.
                     tr
                         td 40х150х6000
-                        td ТУ
+                        td 8-12%
                         td 27
-                        td.price 6205 руб.
+                        td.price 8550 руб.
                     tr
                         td 40х200х6000
-                        td ТУ
+                        td 8-12%
                         td 20
-                        td.price 6205 руб.
+                        td.price 8550 руб.
                     tr
                         td 50х100х6000
-                        td ТУ
+                        td 8-12%
                         td 33
-                        td.price 6205 руб.
+                        td.price 8550 руб.
                     tr
                         td 50х150х6000
-                        td ТУ
+                        td 8-12%
                         td 22
-                        td.price 6205 руб.
+                        td.price 8550 руб.
                     tr
                         td 50х200х6000
-                        td ТУ
+                        td 8-12%
                         td 16
-                        td.price 6205 руб.
+                        td.price 8550 руб.
                     tr
                         td 25х100х6000
                         td ГОСТ
@@ -140,87 +140,87 @@ block product
                         td 100х100х6000
                         td ЭКСТРА
                         td 16
-                        td.price 4675 руб.
+                        td.price 9500 руб.
                     tr
                         td 25х100х6000
                         td ЭКСТРА
                         td 66
-                        td.price 4675 руб.
+                        td.price 9500 руб.
                     tr
                         td 25х150х6000
                         td ЭКСТРА
                         td 44
-                        td.price 4675 руб.
+                        td.price 9500 руб.
                     tr
                         td 25х200х6000
                         td ЭКСТРА
                         td 33
-                        td.price 4675 руб.
+                        td.price 9500 руб.
                     tr
                         td 40х100х6000
                         td ЭКСТРА
                         td 41
-                        td.price 4675 руб.
+                        td.price 9500 руб.
                     tr
                         td 40х150х6000
                         td ЭКСТРА
                         td 27
-                        td.price 4675 руб.
+                        td.price 9500 руб.
                     tr
                         td 40х200х6000
                         td ЭКСТРА
                         td 20
-                        td.price 4675 руб.
+                        td.price 9500 руб.
                     tr
                         td 50х100х6000
                         td ЭКСТРА
                         td 33
-                        td.price 4675 руб.
+                        td.price 9500 руб.
                     tr
                         td 50х150х6000
                         td ЭКСТРА
                         td 22
-                        td.price 4675 руб.
+                        td.price 9500 руб.
                     tr
                         td 50х200х6000
                         td ЭКСТРА
                         td 16
-                        td.price 4675 руб.
+                        td.price 9500 руб.
 
-    .table#doska-obreznaya-2-j-sort
-        .table__title Доска обрезная
-        .table__wrap
-            table
-                tbody
-                    tr
-                        th Размер, мм
-                        th Качество
-                        th Штук в м3
-                        th Цена за м3
-                    tr
-                        td 25х100х6000
-                        td ГОСТ
-                        td 66
-                        td.price 3825 руб.
-                    tr
-                        td 25х150х6000
-                        td ГОСТ
-                        td 44
-                        td.price 3825 руб.
-                    tr
-                        td 25х100х6000
-                        td ТУ
-                        td 66
-                        td.price 3570 руб.
-                    tr
-                        td 25х150х6000
-                        td ТУ
-                        td 44
-                        td.price 3570 руб.
+    //.table#doska-obreznaya-2-j-sort
+    //    .table__title Доска обрезная
+    //    .table__wrap
+    //        table
+    //            tbody
+    //                tr
+    //                    th Размер, мм
+    //                    th Качество
+    //                    th Штук в м3
+    //                    th Цена за м3
+    //                tr
+    //                    td 25х100х6000
+    //                    td ГОСТ
+    //                    td 66
+    //                    td.price 3825 руб.
+    //                tr
+    //                    td 25х150х6000
+    //                    td ГОСТ
+    //                    td 44
+    //                    td.price 3825 руб.
+    //                tr
+    //                    td 25х100х6000
+    //                    td ТУ
+    //                    td 66
+    //                    td.price 3570 руб.
+    //                tr
+    //                    td 25х150х6000
+    //                    td ТУ
+    //                    td 44
+    //                    td.price 3570 руб.
 
     h3.article__title Ассортимент
 
-    p.article__p В зависимости от кромки различают разные сорта изделий, а именно: 1, 2 сорт. Первосортная доска обрезная сухая от производителя Руслесгрупп без сучков, она не деформирована, имеет ровную текстуру. Цена материала рассчитывается в метрах кубических.
+    p.article__p В зависимости от кромки различают разные сорта изделий, а именно: 1, 2 сорт. Первосортная доска обрезная сухая от производителя STROY-ZAKAZ без сучков, она не деформирована, имеет ровную текстуру. Цена материала рассчитывается в метрах кубических.
 
     p.article__p Купить доску обрезную сухую можно в разных типоразмерах: толщина от 25 до 50 мм, ширина от 100 до 200 мм, длина – 6 метров. Если вам необходимы нестандартные габариты – то обратитесь для заказа к нашим менеджерам по телефонам на сайте.
 
