--- a/src/fanera-fk.pug
+++ b/src/fanera-fk.pug
@@ -33,39 +33,39 @@ block product
                         th Цена за лист
                     tr
                         td 4х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 331 руб.
                     tr
                         td 6х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 450 руб.
                     tr
                         td 9х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 595 руб.
                     tr
                         td 12х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 765 руб.
                     tr
                         td 15х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 935 руб.
                     tr
                         td 18х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1113 руб.
                     tr
                         td 21х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1232 руб.
                     tr
                         td 24х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1445 руб.
                     tr
                         td 30х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1997 руб.
 
     .table#fanera-fk-sort-4-4
@@ -79,39 +79,39 @@ block product
                         th Цена за лист
                     tr
                         td 4х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 314 руб.
                     tr
                         td 6х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 400 руб.
                     tr
                         td 9х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 484 руб.
                     tr
                         td 12х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 586 руб.
                     tr
                         td 15х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 731 руб.
                     tr
                         td 18х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 858 руб.
                     tr
                         td 21х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 952 руб.
                     tr
                         td 24х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1249 руб.
                     tr
                         td 30х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1334 руб.
 
 
@@ -126,35 +126,35 @@ block product
                         th Цена за лист
                     tr
                         td 4х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 229 руб.
                     tr
                         td 6х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 306 руб.
                     tr
                         td 8х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 400 руб.
                     tr
                         td 9х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 408 руб.
                     tr
                         td 12х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 518 руб.
                     tr
                         td 15х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 629 руб.
                     tr
                         td 18х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 739 руб.
                     tr
                         td 21х1525х1525
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 858 руб.
 
     h3.article__title Фанера – качественный материал для обшивки и изготовления мебели в Москве
