--- a/src/fanera-fsf.pug
+++ b/src/fanera-fsf.pug
@@ -37,27 +37,27 @@ block product
                         th Цена за лист
                     tr
                         td 6х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 467 руб.
                     tr
                         td 9х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 637 руб.
                     tr
                         td 12х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 765 руб.
                     tr
                         td 15х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 977 руб.
                     tr
                         td 18х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1190 руб.
                     tr
                         td 21х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1402 руб.
 
 
@@ -72,31 +72,31 @@ block product
                         th Цена за лист
                     tr
                         td 4х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 552 руб.
                     tr
                         td 6х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 637 руб.
                     tr
                         td 9х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 935 руб.
                     tr
                         td 12х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1105 руб.
                     tr
                         td 15х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1275 руб.
                     tr
                         td 18х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1487 руб.
                     tr
                         td 21х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1827 руб.
 
 
@@ -111,51 +111,51 @@ block product
                         th Цена за лист
                     tr
                         td 4х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 425 руб.
                     tr
                         td 6х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 510 руб.
                     tr
                         td 9х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 680 руб.
                     tr
                         td 12х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 807 руб.
                     tr
                         td 15х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1062 руб.
                     tr
                         td 18х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1275 руб.
                     tr
                         td 21х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1402 руб.
                     tr
                         td 24х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1802 руб.
                     tr
                         td 27х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 2023 руб.
                     tr
                         td 30х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 2244 руб.
                     tr
                         td 35х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 2592 руб.
                     tr
                         td 40х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 2975 руб.
 
     .table#fanera-fsf-1500-3000-4-4
@@ -169,33 +169,33 @@ block product
                         th Цена за лист
                     tr
                         td 6х1500х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 807 руб.
                     tr
                         td 9х1500х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1173 руб.
                     tr
                         td 12х1500х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1445 руб.
                     tr
                         td 15х1500х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1827 руб.
                     tr
                         td 18х1500х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 2040 руб.
                     tr
                         td 21х1500х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 2167 руб.
 
 
     h3.article__title Фанера ФСФ
 
-    p.article__p Фанера является материалом, изготавливаемым из шпона путем склеивания между собой слоев специальным составом. Обычно его производят в виде квадратных элементов. Очень популярен в строительной сфере, а также мебельной промышленности. Фанера ФСФ – расшифровка этой аббревиатуры проста. Первая буква Ф и обозначает название материала, то есть – «фанера». СФ – обозначает название клея – смоляной фенолформальдегидный. Изготавливают шпон из древесной стружки. Материал может быть как из лиственных, так и из хвойных пород деревьев. ФСФ склеивается из нескольких слоев шпона – от трех и больше. Из-за специфического клея на торцах материала можно увидеть темные красные или же бурые прослойки. Если вы решили ФСФ купить в Москве, то наша компания «Лесмосбаза» предлагает ознакомиться вам с нашим ассортиментом. Мы предлагаем качественную продукцию по привлекательной стоимости.
+    p.article__p Фанера является материалом, изготавливаемым из шпона путем склеивания между собой слоев специальным составом. Обычно его производят в виде квадратных элементов. Очень популярен в строительной сфере, а также мебельной промышленности. Фанера ФСФ – расшифровка этой аббревиатуры проста. Первая буква Ф и обозначает название материала, то есть – «фанера». СФ – обозначает название клея – смоляной фенолформальдегидный. Изготавливают шпон из древесной стружки. Материал может быть как из лиственных, так и из хвойных пород деревьев. ФСФ склеивается из нескольких слоев шпона – от трех и больше. Из-за специфического клея на торцах материала можно увидеть темные красные или же бурые прослойки. Если вы решили ФСФ купить в Москве, то наша компания «STROY-ZAKAZ» предлагает ознакомиться вам с нашим ассортиментом. Мы предлагаем качественную продукцию по привлекательной стоимости.
     h3.article__title Где используют фанеру
     p.article__p Обязательно хвойный шпон используют снаружи, если материал должен быть влагостойким. Внутренние элементы могут быть и из лиственного дерева. Отмечается особая устойчивость к микроорганизмам. Такую фанеру не потревожит грибок, а также гниение. Березовая ФСФ выполняется из древесины одноименного названия. Отличается замечательной прочностью, а также износостойкостью. Стоимость такой фанеры достаточно высока. Шпон для изготовления выбирают только березовый, из-за этого прочность материала увеличивается приблизительно на 20%. Однако в этом случае вырастает и вес.
 
