--- a/src/fanera-laminirovannaya.pug
+++ b/src/fanera-laminirovannaya.pug
@@ -111,7 +111,7 @@ block product
 
     h3.article__title Ламинированная фанера - цена
 
-    p.article__p Ламинированная фанера – материал, который может похвастаться такими качествами, как замечательная устойчивость к влаге и долговечность службы. Поэтому используют его в строительстве достаточно часто. Материал изготавливают из дерева, допускается как использование одного сорта, так и нескольких. Купить ламинированную фанеру в Москве можно у нас. На нашем сайте компании «Лесмосбаза» вы найдете обширный ассортимент продукции.
+    p.article__p Ламинированная фанера – материал, который может похвастаться такими качествами, как замечательная устойчивость к влаге и долговечность службы. Поэтому используют его в строительстве достаточно часто. Материал изготавливают из дерева, допускается как использование одного сорта, так и нескольких. Купить ламинированную фанеру в Москве можно у нас. На нашем сайте компании «STROY-ZAKAZ» вы найдете обширный ассортимент продукции.
 
     h3.article__title Характеристики материала
 
