--- a/src/imitaciya-brusa.pug
+++ b/src/imitaciya-brusa.pug
@@ -9,9 +9,9 @@ block product
         .spyLinks__item
             img(class="spyLink__img" src="img/Имитация бруса маленькие фото/Имитация бруса класс А.jpg")
             a(class="link-spy spyLinks__link" href="#imitaciya-brusa-klass-a") класс А
-        .spyLinks__item
-            img(class="spyLink__img" src="img/Имитация бруса маленькие фото/Имитация бруса класс АB.jpg")
-            a(class="link-spy spyLinks__link" href="#imitaciya-brusa-klass-ab") класс АВ
+        //.spyLinks__item
+        //    img(class="spyLink__img" src="img/Имитация бруса маленькие фото/Имитация бруса класс АB.jpg")
+        //    a(class="link-spy spyLinks__link" href="#imitaciya-brusa-klass-ab") класс АВ
         .spyLinks__item
             img(class="spyLink__img" src="img/Имитация бруса маленькие фото/Имитация бруса класс B.jpg")
             a(class="link-spy spyLinks__link" href="#imitaciya-brusa-klass-b") класс В
@@ -38,66 +38,66 @@ block product
                         th Цена за м2
                     tr
                         td 16х140х6000
-                        td ЭКСТРА
-                        td.price 297 руб.
+                        td А
+                        td.price 290 руб.
                     tr
                         td 16х190х6000
-                        td ЭКСТРА
-                        td.price 297 руб.
+                        td А
+                        td.price 290 руб.
                     tr
                         td 18х140х6000
-                        td ЭКСТРА
-                        td.price 331 руб.
+                        td А
+                        td.price 330 руб.
                     tr
                         td 18х190х6000
-                        td ЭКСТРА
-                        td.price 331 руб.
+                        td А
+                        td.price 330 руб.
                     tr
                         td 20х140х6000
-                        td ЭКСТРА
+                        td А
                         td.price 365 руб.
                     tr
                         td 20х190х6000
-                        td ЭКСТРА
+                        td А
                         td.price 365 руб.
                     tr
                         td 25х190х6000
-                        td ЭКСТРА
-                        td.price 433 руб.
+                        td А
+                        td.price 450 руб.
 
-    .table#imitaciya-brusa-klass-ab
-        .table__title класс АВ
-        .table__wrap
-            table
-                tbody
-                    tr
-                        th Размер, мм
-                        th Качество
-                        th Цена за м2
-                    tr
-                        td 16х140х6000
-                        td ЭКСТРА
-                        td.price 289 руб.
-                    tr
-                        td 16х190х6000
-                        td ЭКСТРА
-                        td.price 289 руб.
-                    tr
-                        td 18х140х6000
-                        td ЭКСТРА
-                        td.price 323 руб.
-                    tr
-                        td 18х190х6000
-                        td ЭКСТРА
-                        td.price 323 руб.
-                    tr
-                        td 20х140х6000
-                        td ЭКСТРА
-                        td.price 340 руб.
-                    tr
-                        td 20х190х6000
-                        td ЭКСТРА
-                        td.price 340 руб.
+    //.table#imitaciya-brusa-klass-ab
+    //    .table__title класс АВ
+    //    .table__wrap
+    //        table
+    //            tbody
+    //                tr
+    //                    th Размер, мм
+    //                    th Качество
+    //                    th Цена за м2
+    //                tr
+    //                    td 16х140х6000
+    //                    td АВ
+    //                    td.price 289 руб.
+    //                tr
+    //                    td 16х190х6000
+    //                    td АВ
+    //                    td.price 289 руб.
+    //                tr
+    //                    td 18х140х6000
+    //                    td ЭКСТРА
+    //                    td.price 323 руб.
+    //                tr
+    //                    td 18х190х6000
+    //                    td ЭКСТРА
+    //                    td.price 323 руб.
+    //                tr
+    //                    td 20х140х6000
+    //                    td ЭКСТРА
+    //                    td.price 340 руб.
+    //                tr
+    //                    td 20х190х6000
+    //                    td ЭКСТРА
+    //                    td.price 340 руб.
 
 
     .table#imitaciya-brusa-klass-b
@@ -108,27 +108,27 @@ block product
                     tr
                         th Размер, мм
                         th Качество
-                        th Цена за лист
+                        th Цена за м2
                     tr
                         td 16х140х6000
-                        td ЭКСТРА
-                        td.price 221 руб.
+                        td В
+                        td.price 220 руб.
                     tr
                         td 18х140х6000
-                        td ЭКСТРА
-                        td.price 238 руб.
+                        td В
+                        td.price 230 руб.
                     tr
                         td 18х190х6000
-                        td ЭКСТРА
-                        td.price 238 руб.
+                        td В
+                        td.price 230 руб.
                     tr
                         td 20х140х6000
-                        td ЭКСТРА
-                        td.price 255 руб.
+                        td ВВ
+                        td.price 270 руб.
                     tr
                         td 20х190х6000
-                        td ЭКСТРА
-                        td.price 255 руб.
+                        td В
+                        td.price 270 руб.
 
     .table#imitaciya-brusa-klass-c
         .table__title класс С
@@ -138,27 +138,27 @@ block product
                     tr
                         th Размер, мм
                         th Качество
-                        th Цена за лист
+                        th Цена за м2
                     tr
                         td 16х140х6000
-                        td ЭКСТРА
-                        td.price 187 руб.
+                        td С
+                        td.price 180 руб.
                     tr
                         td 16х190х6000
-                        td ЭКСТРА
-                        td.price 187 руб.
+                        td С
+                        td.price 180 руб.
                     tr
                         td 18х140х6000
-                        td ЭКСТРА
-                        td.price 204 руб.
+                        td С
+                        td.price 200 руб.
                     tr
                         td 18х190х6000
-                        td ЭКСТРА
-                        td.price 204 руб.
+                        td С
+                        td.price 200 руб.
                     tr
                         td 20х140х6000
-                        td ЭКСТРА
-                        td.price 238 руб.
+                        td С
+                        td.price 240 руб.
 
     h3.article__title Изготовление
 
@@ -166,7 +166,7 @@ block product
 
     p.article__p В процессе обработки заготовки высушивают, придают им нужные размеры и форму. Особенность конструкции состоит в наличии системы шип-паз и вентиляционных бороздок по всей длине доски. Такой профиль обеспечивает простой монтаж и плотное соединение элементов.
     h3.article__title Размеры
-    p.article__p Размеры, предлагаемые компанией «РусЛесГрупп», соответствуют основным требованиям строительного рынка:
+    p.article__p Размеры, предлагаемые компанией «STROY-ZAKAZ», соответствуют основным требованиям строительного рынка:
     p.article__p — длина от <b>2 до 6 метров;</b>
     p.article__p — ширина от <b>145 до 190 мм;</b>
     p.article__p — толщиной от <b>10 до 20 мм.</b>
