--- a/src/index.pug
+++ b/src/index.pug
@@ -137,6 +137,9 @@ block content
                     li.sz-contact__item.sz-contact__item_phone +7 (861) 203 51 48
                     li.sz-contact__item.sz-contact__item_email stroyzakaz01@mail.ru
                     li.sz-contact__item.sz-contact__item_address Россия, Архангельская область, г. Северодвинск, Архангельское шоссе 29
+                .working-hours.contactSection__working-hours
+                    span.working-hours__item.working-hours__item_b Режим работы:
+                    <span class="working-hours__item"> с 9:00 до 18:00 (Пн-Пт),</span> <span class="working-hours__item">с 10:00 до 15:00 (Сб-Вс)</span>
 
     .mapSection
         #map_content
