--- a/src/osb-3-plita.pug
+++ b/src/osb-3-plita.pug
@@ -23,51 +23,51 @@ block product
                         th Цена за лист
                     tr
                         td 8х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 391 руб.
                     tr
                         td 8х1250х2500
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 400 руб.
                     tr
                         td 9х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 400 руб.
                     tr
                         td 9х1250х2500
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 416 руб.
                     tr
                         td 12х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 518 руб.
                     tr
                         td 12х1250х2500
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 535 руб.
                     tr
                         td 15х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 680 руб.
                     tr
                         td 15х1250х2500
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 705 руб.
                     tr
                         td 18х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 858 руб.
                     tr
                         td 18х1250х2500
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 884 руб.
                     tr
                         td 22х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1173 руб.
                     tr
                         td 22х1250х2500
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1173 руб.
 
 
