--- a/src/parketnaya-doska.pug
+++ b/src/parketnaya-doska.pug
@@ -38,14 +38,14 @@ block product
                         td 19х80
                         td 0,31
                         td 6
-                        td.price 284 руб.
+                        td.price 290 руб.
                     tr
                         td А (Прима)
                         td 0,64
                         td 19х80
                         td 0,31
                         td 6
-                        td.price 208 руб.
+                        td.price 210 руб.
                     tr
                         td В (Рустик)
                         td 0,64
@@ -414,7 +414,7 @@ block product
     p.article__p Также важным преимуществом такого материала можно считать возможность многократной обработки напольного покрытия, изготовленного из массива дерева. По истечении времени, если материал изменил свой внешний вид в результате естественного износа или под воздействием агрессивных факторов, не составит труда вернуть ему первозданный вид.
     h3.article__title Паркетная доска: Ассортимент и цены
 
-    p.article__p Технологии изготовления покрытия дают возможность использовать такой материал для оформления пола без дополнительной обработки. Так вы сумеете купить в Москве практичную и надежную паркетную доску, на сайте компании «ПримаЛес» указана вся актуальная информация об изделиях – цены, описания, а также характеристики:
+    p.article__p Технологии изготовления покрытия дают возможность использовать такой материал для оформления пола без дополнительной обработки. Так вы сумеете купить в Москве практичную и надежную паркетную доску, на сайте компании «STROY-ZAKAZ» указана вся актуальная информация об изделиях – цены, описания, а также характеристики:
     p.article__p — материал – лиственница;
     p.article__p — способ соединения – «шип-паз»;
     p.article__p — сорт – А, В, С, Э, Эконом;
