--- a/src/pug-components/product.pug
+++ b/src/pug-components/product.pug
@@ -12,7 +12,7 @@ block content
                         li <a class="arrow arrow_right" href="brus-obreznoi.html">Брус обрезной</a>
                             ul
                                 li <a href="brus-obreznoi.html#brus-obreznoi-gost">Брус обрезной ГОСТ</a>
-                                li <a href="brus-obreznoi.html#brus-obreznoi-ty">Брус обрезной ТУ</a>
+                                li <a href="brus-obreznoi.html#brus-obreznoi-ty">Брус обрезной сухой</a>
                         li <a class="arrow arrow_right" href="brus-profilirovannyy.html">Брус профилированный</a>
                             ul
                                 li <a href="brus-profilirovannyy.html#brus-profilirovannyy">Брус профилированный</a>
@@ -25,11 +25,11 @@ block content
                             ul
                                 li <a href="brusok.html#brusok-obreznoj">Брусок обрезной</a>
                                 li <a href="brusok.html#brusok-strogannyj">Брусок строганный</a>
-                        li <a class="arrow arrow_right" href="doska-obreznaya-osina.html">Доска обрезная</a>
+                        li <a class="arrow arrow_right" href="doska-obreznaya.html">Доска обрезная</a>
                             ul
                                 li <a href="doska-obreznaya.html#doska-obreznaya">Доска обрезная</a>
                                 li <a href="doska-obreznaya.html#doska-obreznaya-osina">Доска обрезная осина</a>
-                                li <a href="doska-obreznaya.html#doska-obreznaya-2-j-sort">Доска обрезная 2-й сорт</a>
+                                //li <a href="doska-obreznaya.html#doska-obreznaya-2-j-sort">Доска обрезная 2-й сорт</a>
                         li <a class="arrow arrow_right" href="doska-polovaya.html">Доска половая</a>
                             ul
                                 li <a href="doska-polovaya.html#doska-polovaya">Доска половая</a>
@@ -40,10 +40,10 @@ block content
                                 li <a href="doska-strogannay.html#">Доска сухая строганная</a>
                         li <a class="arrow arrow_right" href="vagonka.html">Вагонка</a>
                             ul
-                                li <a href="vagonka.html#vagonka">Вагонка</a>
-                                li <a href="vagonka.html#vagonka-suhaya">Вагонка сухая</a>
                                 li <a href="vagonka.html#evrovagonka">Евровагонка</a>
-                        li <a class="arrow arrow_right" href="fanera-fk.html#">Фанера ФК</a>
+                                li <a href="vagonka.html#vagonka">Вагонка Штиль (лиственница)</a>
+                                li <a href="vagonka.html#vagonka-suhaya">Вагонка Штиль (осина)</a>
+                        li <a class="arrow arrow_right" href="fanera-fk.html">Фанера ФК</a>
                             ul
                                 li <a href="fanera-fk.html#fanera-fk-sort-3-4">Фанера ФК сорт 3/4</a>
                                 li <a href="fanera-fk.html#fanera-fk-sort-4-4">Фанера ФК сорт 4/4</a>
@@ -64,7 +64,7 @@ block content
                         li <a class="arrow arrow_right" href="imitaciya-brusa.html">Имитация бруса</a>
                             ul
                                 li <a href="imitaciya-brusa.html#imitaciya-brusa-klass-a">класс А</a>
-                                li <a href="imitaciya-brusa.html#imitaciya-brusa-klass-ab">класс АВ</a>
+                                //li <a href="imitaciya-brusa.html#imitaciya-brusa-klass-ab">класс АВ</a>
                                 li <a href="imitaciya-brusa.html#imitaciya-brusa-klass-b">класс В</a>
                                 li <a href="imitaciya-brusa.html#imitaciya-brusa-klass-c">класс С</a>
                         li <a class="arrow arrow_right" href="parketnaya-doska.html">Паркетная доска</a>
