--- a/src/trash/css/common.css
+++ b/src/trash/css/common.css
@@ -298,6 +298,15 @@ ul.dropdown:after {
   height: 25px;
   background-position: -2px -46px;
 }
+.working-hours__item {
+  font-size: 18px;
+  font-weight: 500;
+  color: #353535;
+}
+.working-hours__item_b {
+  font-weight: 600;
+  color: #191919;
+}
 .header {
   min-height: 105px;
   border-bottom: 1px solid #fcbb2d;
@@ -305,10 +314,20 @@ ul.dropdown:after {
 .header .container {
   min-height: 105px;
 }
+.header__working-hours {
+  display: flex;
+  flex-direction: column;
+  width: 215px;
+}
+.header__working-hours .working-hours__item {
+  margin-bottom: 2px;
+}
+.header__working-hours .working-hours__item_b {
+  margin-bottom: 5px;
+}
 .header__contact {
   margin: 10px 0 10px 10px;
-  min-width: 690px;
-  width: 60%;
+  width: 685px;
 }
 .header__contact .sz-contact__item {
   width: max-content;
@@ -316,6 +335,16 @@ ul.dropdown:after {
 }
 .header__logo {
   margin: 10px 20px 10px 0;
+  flex-direction: column;
+  align-items: center;
+}
+.header__logo .sz-logo__text {
+  padding: 10px 0 0 0;
+  font-size: 18px;
+}
+.header__logo .sz-logo__hyphen {
+  display: block;
+  font-size: 0;
 }
 .header__call {
   margin: 10px 0 10px 10px;
@@ -340,6 +369,9 @@ ul.dropdown:after {
   font-size: 18px;
   font-weight: 600;
   letter-spacing: 0.45px;
+}
+.subHeader .nav__working-hours {
+  display: none;
 }
 .subHeader .nav > li {
   height: 100%;
@@ -531,6 +563,20 @@ ul.dropdown:after {
   margin-top: 53px;
   margin-bottom: 20px;
 }
+.contactSection__working-hours {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align: center;
+  padding: 20px 0 20px 0;
+}
+.contactSection__working-hours .working-hours__item {
+  margin: 0 5px;
+}
+.contactSection__working-hours .working-hours__item_b {
+  margin-right: 8px;
+}
 .contactSection .contact__wrap {
   min-height: 263px;
   padding: 0 25px 25px 25px;
@@ -614,15 +660,15 @@ ul.dropdown:after {
   .header__logo .sz-logo__img {
     width: 60px;
   }
-  .header__logo .sz-logo__text {
-    padding-left: 20px;
-    font-size: 20px;
-  }
   .header__contact {
-    width: 65%;
-    min-width: 607px;
+    display: flex;
+    flex-direction: column;
+    width: 335px;
   }
   .header .sz-contact__item {
+    font-size: 16px;
+  }
+  .header__working-hours .working-hours__item {
     font-size: 16px;
   }
 }
@@ -657,16 +703,6 @@ ul.dropdown:after {
   .arrow:after {
     display: none;
   }
-  .header__logo .sz-logo__hyphen {
-    display: block;
-    font-size: 0;
-  }
-  .header__contact {
-    margin-left: 10%;
-  }
-  .header .sz-contact__item {
-    font-size: 16px;
-  }
   .subHeader .nav__item .arrow.arrow_down:after {
     display: block;
   }
@@ -692,8 +728,7 @@ ul.dropdown:after {
 }
 @media (max-width: 850px) {
   .header__contact {
-    min-width: auto;
-    width: 600px;
+    width: 215px;
   }
   .header__contact .sz-contact__item b {
     display: none;
@@ -716,11 +751,6 @@ ul.dropdown:after {
   }
   .header__contact {
     margin: 10px 2% 10px 2%;
-    min-width: auto;
-    width: 280px;
-  }
-  .header__contact .sz-contact__item {
-    width: 100%;
   }
   .topSliderSection {
     height: 400px;
@@ -810,18 +840,38 @@ ul.dropdown:after {
   }
 }
 @media (max-width: 600px) {
-  .header__logo {
-    flex-direction: column;
+  .header__working-hours {
+    display: none;
   }
-  .header__logo .sz-logo__text {
-    padding: 10px 0 0 0;
-    font-size: 18px;
+  .subHeader .nav__working-hours {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+  }
+  .subHeader .nav__working-hours .working-hours__item {
+    font-weight: 500;
+    margin-bottom: 2px;
+  }
+  .subHeader .nav__working-hours .working-hours__item_b {
+    margin-bottom: 5px;
+    font-weight: 600;
   }
   .contactSection .sz-contact {
     justify-content: flex-start;
   }
   .contactSection .sz-contact__item {
     width: 100%;
+  }
+  .contactSection__working-hours {
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+  .contactSection__working-hours .working-hours__item {
+    margin-bottom: 2px;
+  }
+  .contactSection__working-hours .working-hours__item_b {
+    margin-bottom: 5px;
   }
 }
 @media (max-width: 500px) {
