--- a/src/vagonka.pug
+++ b/src/vagonka.pug
@@ -7,14 +7,14 @@ block product
         .title__line
     .spyLinks.flex_row__center.flex_wrap
         .spyLinks__item
+            img(class="spyLink__img" src="img/Вагонка маленькие фото/Евровагонка (маленькое фото).jpg")
+            a(class="link-spy spyLinks__link" href="#evrovagonka") Евровагонка (сосна)
+        .spyLinks__item
             img(class="spyLink__img" src="img/Вагонка маленькие фото/Вагонка (маленькое фото).jpg")
-            a(class="link-spy spyLinks__link" href="#vagonka") Вагонка
+            a(class="link-spy spyLinks__link" href="#vagonka") Вагонка Штиль (лиственница)
         .spyLinks__item
             img(class="spyLink__img" src="img/Вагонка маленькие фото/Вагонка сухая (маленькое фото).jpg")
-            a(class="link-spy spyLinks__link" href="#vagonka-suhaya") Вагонка сухая
-        .spyLinks__item
-            img(class="spyLink__img" src="img/Вагонка маленькие фото/Евровагонка (маленькое фото).jpg")
-            a(class="link-spy spyLinks__link" href="#evrovagonka") Евровагонка
+            a(class="link-spy spyLinks__link" href="#vagonka-suhaya") Вагонка Штиль (осина)
 
     .product__gallery.gallery.flex_row__center.flex_wrap
         img(class="gallery__item" src="img/Вагонка большие фото/Вагонка 1 (большое фото).jpg")
@@ -22,84 +22,102 @@ block product
         img(class="gallery__item" src="img/Вагонка большие фото/Вагонка 3 (большое фото).jpg")
         img(class="gallery__item" src="img/Вагонка большие фото/Вагонка 4 (большое фото).jpg")
 
-    .table#vagonka
-        .table__title Вагонка
+    .table#evrovagonka
+        .table__title Евровагонка (сосна)
         .table__wrap
             table
                 tbody
                     tr
                         th Размер, мм
-                        th Качество
-                        th Штук в м3
-                        th Цена за м3
+                        th Длина, м
+                        th СОРТ
+                        th Цена за м2
                     tr
-                        td 20х100х6000
-                        td ЭКСТРА
-                        td 83
-                        td.price 10625 руб.
+                        td 12,5х96
+                        td от 2 до 6
+                        td А
+                        td.price 230 руб.
                     tr
-                        td 20х130х6000
-                        td ЭКСТРА
-                        td 64
-                        td.price 10625 руб.
+                        td 12,5х140
+                        td от 2 до 6
+                        td А
+                        td.price 230 руб.
                     tr
-                        td 20х150х6000
+                        td 12,5х96
+                        td от 2 до 6
+                        td В
+                        td.price 210 руб.
+                    tr
+                        td 12,5х140
+                        td от 2 до 6
+                        td В
+                        td.price 210 руб.
+                    tr
+                        td 12,5х96
+                        td от 2 до 6
+                        td С
+                        td.price 190 руб.
+                    tr
+                        td 12,5х140
+                        td от 2 до 6
+                        td С
+                        td.price 190 руб.
+
+
+
+
+    .table#vagonka
+        .table__title Вагонка Штиль (лиственница)
+        .table__wrap
+            table
+                tbody
+                    tr
+                        th Размер, мм
+                        th Длина, м
+                        th СОРТ
+                        th Цена за м2
+                    tr
+                        td 14х120
+                        td от 2 до 6
                         td ЭКСТРА
-                        td 55
-                        td.price 10625 руб.
+                        td 600 руб.
+                    tr
+                        td 14х120
+                        td от 2 до 6
+                        td ПРИМА
+                        td 500 руб.
+                    tr
+                        td 14х120
+                        td от 2 до 6
+                        td А
+                        td 400 руб.
+                    tr
+                        td 14х120
+                        td от 2 до 6
+                        td В
+                        td 350 руб.
 
 
     .table#vagonka-suhaya
-        .table__title Вагонка сухая
+        .table__title Вагонка Штиль (осина)
         .table__wrap
             table
                 tbody
                     tr
                         th Размер, мм
-                        th Качество
-                        th Штук в м3
-                        th Цена за м3
-                    tr
-                        td 20х100х6000
-                        td ЭКСТРА
-                        td 83
-                        td.price 11475 руб.
-                    tr
-                        td 20х130х6000
-                        td ЭКСТРА
-                        td 64
-                        td.price 11475 руб.
-                    tr
-                        td 20х150х6000
-                        td ЭКСТРА
-                        td 55
-                        td.price 11475 руб.
-
-    .table#evrovagonka
-        .table__title Евровагонка
-        .table__wrap
-            table
-                tbody
-                    tr
-                        th Модель
-                        th Качество
+                        th Длина, м
+                        th СОРТ
                         th Цена за м2
                     tr
-                        td Штиль
+                        td 15х96
+                        td от 1 до 3
                         td ЭКСТРА
-                        td.price 297 руб.
+                        td 750 руб.
                     tr
-                        td Класс «А»
-                        td ЭКСТРА
-                        td.price 229 руб.
-                    tr
-                        td Класс «В»
-                        td ЭКСТРА
-                        td.price 187 руб.
-                    tr
-                        td Класс «С»
-                        td ЭКСТРА
-                        td.price 161 руб.
+                        td 15х96
+                        td от 1 до 3
+                        td А
+                        td 600 руб.
 
 
     h3.article__title Качественная деревянная вагонка широко применяется для фасадной и внутренней отделки.
@@ -128,7 +146,7 @@ block product
     p.article__p При выборе нужных размеров материала также стоит учитывать и отличия их профилей. От особенностей скрепления фасадного материала, зависит количество квадратных метров изделий, требуемых для проведения работ. Разделяется вагонка по типу профилей на такие группы: евро, штиль (колхозница, крестьянка).
     h3.article__title Дешевая вагонка в Москве: Как выбрать и заказать изделия?
 
-    p.article__p Наша компания предлагает всем желающим купить по выгодной цене деревянную вагонку в любом объеме. У нас каждому клиенту доступен опт и розница: в каталогах компании может быть приобретен 1 м2, 1 штука (например, как потолочный материал), 1 куб изделий.
+    p.article__p Наша компания предлагает всем желающим купить по выгодной цене деревянную вагонку в любом объеме. У нас каждому клиенту доступен опт и розница: в каталогах компании может быть приобретен 50 м2, 1 куб изделий.
 
     p.article__p Для всех товаров указан размер (длина от 3 до 6 м, ширина, толщина) и сорт. Подробная информация позволяет легко подобрать недорогой материал, независимо от того будет заказан всего квадратный метр сырья или целая пачка.
 
