--- a/src/brus-profilirovannyy.pug
+++ b/src/brus-profilirovannyy.pug
@@ -32,32 +32,32 @@ block product
                         td 100х100х6000
                         td ЭКСТРА
                         td 16
-                        td.price 9350 руб.
+                        td.price 10950 руб.
                     tr
                         td 100х150х6000
                         td ЭКСТРА
                         td 11
-                        td.price 9775 руб.
+                        td.price 10950 руб.
                     tr
                         td 100х200х6000
                         td ЭКСТРА
                         td 8
-                        td.price 9775 руб.
+                        td.price 10950 руб.
                     tr
                         td 150х150х6000
                         td ЭКСТРА
                         td 7
-                        td.price 9775 руб.
+                        td.price 10950 руб.
                     tr
                         td 150х200х6000
                         td ЭКСТРА
                         td 5
-                        td.price 10200 руб.
+                        td.price 11200 руб.
                     tr
                         td 200х200х6000
                         td ЭКСТРА
                         td 4
-                        td.price 10200 руб.
+                        td.price 11200 руб.
 
     .table#brus-suhoj-profilirovannyy
         .table__title БРУС сухой профилированный
@@ -73,32 +73,32 @@ block product
                         td 100х100х6000
                         td ЭКСТРА
                         td 16
-                        td.price 10625 руб.
+                        td.price 12950 руб.
                     tr
                         td 100х150х6000
                         td ЭКСТРА
                         td 11
-                        td.price 10625 руб.
+                        td.price 12950 руб.
                     tr
                         td 100х200х6000
                         td ЭКСТРА
                         td 8
-                        td.price 10625 руб.
+                        td.price 12950 руб.
                     tr
                         td 150х150х6000
                         td ЭКСТРА
                         td 7
-                        td.price 10625 руб.
+                        td.price 12950 руб.
                     tr
                         td 150х200х6000
                         td ЭКСТРА
                         td 5
-                        td.price 11050 руб.
+                        td.price 13200 руб.
                     tr
                         td 200х200х6000
                         td ЭКСТРА
                         td 4
-                        td.price 11050 руб.
+                        td.price 13200 руб.
 
 
 
@@ -116,7 +116,7 @@ block product
 
     p.article__p У нас можно приобрести материал как оптом, так и в розницу.
 
-    p.article__p p.article__p Основу нашего товарного ассортимента представляет профилированный брус камерной сушки, изготовленный из высококачественного сырья. В отличие от аналога – пиломатериала естественной влажности, такой профилированный брус имеет более низкую влажность (10-14%), за счет чего материал получает повышенные показатели прочности.
+    p.article__p Основу нашего товарного ассортимента представляет профилированный брус камерной сушки, изготовленный из высококачественного сырья. В отличие от аналога – пиломатериала естественной влажности, такой профилированный брус имеет более низкую влажность (10-14%), за счет чего материал получает повышенные показатели прочности.
     p.article__p Общие характеристики изделия: 1 сорт, хвойные породы древесины. Сырье и сама готовая продукция соответствует всем нормам и требованиям ГОСТ.
 
     p.article__p Нами осуществляется продажа профилированного бруса следующего калибра:
