--- a/src/pug-components/layout.pug
+++ b/src/pug-components/layout.pug
@@ -34,7 +34,11 @@ html(lang="ru-Ru")
                       li.sz-contact__item.sz-contact__item_phone <b>Санкт-Петербург:</b> +7 (812) 309 42 95
                       li.sz-contact__item.sz-contact__item_phone <b>Краснодар:</b> +7 (861) 203 51 48
                       li.sz-contact__item.sz-contact__item_email stroyzakaz01@mail.ru
-                    //button(class="header__call btn btn_transparent text_color_grey" type="button") Меня заменят
+                    .working-hours.header__working-hours
+                        span.working-hours__item.working-hours__item_b Режим работы:
+                        span.working-hours__item с 9:00 до 18:00 (Пн-Пт),
+                        span.working-hours__item с 10:00 до 15:00 (Сб-Вс)
+
                     button.burger
                         i
             mixin subHeader
@@ -49,7 +53,7 @@ html(lang="ru-Ru")
                                 li <a class="arrow arrow_right" href="brus-obreznoi.html">Брус обрезной</a>
                                     ul
                                         li <a href="brus-obreznoi.html#brus-obreznoi-gost">Брус обрезной ГОСТ</a>
-                                        li <a href="brus-obreznoi.html#brus-obreznoi-ty">Брус обрезной ТУ</a>
+                                        li <a href="brus-obreznoi.html#brus-obreznoi-ty">Брус обрезной сухой</a>
                                 li <a class="arrow arrow_right" href="brus-profilirovannyy.html">Брус профилированный</a>
                                     ul
                                         li <a href="brus-profilirovannyy.html#brus-profilirovannyy">Брус профилированный</a>
@@ -66,7 +70,7 @@ html(lang="ru-Ru")
                                     ul
                                         li <a href="doska-obreznaya.html#doska-obreznaya">Доска обрезная</a>
                                         li <a href="doska-obreznaya.html#doska-obreznaya-osina">Доска обрезная осина</a>
-                                        li <a href="doska-obreznaya.html#doska-obreznaya-2-j-sort">Доска обрезная 2-й сорт</a>
+                                        //li <a href="doska-obreznaya.html#doska-obreznaya-2-j-sort">Доска обрезная 2-й сорт</a>
                                 li <a class="arrow arrow_right" href="doska-polovaya.html">Доска половая</a>
                                     ul
                                         li <a href="doska-polovaya.html#doska-polovaya">Доска половая</a>
@@ -77,9 +81,9 @@ html(lang="ru-Ru")
                                         li <a href="doska-strogannay.html#">Доска сухая строганная</a>
                                 li <a class="arrow arrow_right" href="vagonka.html">Вагонка</a>
                                     ul
-                                        li <a href="vagonka.html#vagonka">Вагонка</a>
-                                        li <a href="vagonka.html#vagonka-suhaya">Вагонка сухая</a>
                                         li <a href="vagonka.html#evrovagonka">Евровагонка</a>
+                                        li <a href="vagonka.html#vagonka">Вагонка Штиль (лиственница)</a>
+                                        li <a href="vagonka.html#vagonka-suhaya">Вагонка Штиль (осина)</a>
                                 li <a class="arrow arrow_right" href="fanera-fk.html">Фанера ФК</a>
                                     ul
                                         li <a href="fanera-fk.html#fanera-fk-sort-3-4">Фанера ФК сорт 3/4</a>
@@ -101,7 +105,7 @@ html(lang="ru-Ru")
                                 li <a class="arrow arrow_right" href="imitaciya-brusa.html">Имитация бруса</a>
                                     ul
                                         li <a href="imitaciya-brusa.html#imitaciya-brusa-klass-a">класс А</a>
-                                        li <a href="imitaciya-brusa.html#imitaciya-brusa-klass-ab">класс АВ</a>
+                                        //li <a href="imitaciya-brusa.html#imitaciya-brusa-klass-ab">класс АВ</a>
                                         li <a href="imitaciya-brusa.html#imitaciya-brusa-klass-b">класс В</a>
                                         li <a href="imitaciya-brusa.html#imitaciya-brusa-klass-c">класс С</a>
                                 li <a class="arrow arrow_right" href="parketnaya-doska.html">Паркетная доска</a>
@@ -128,6 +132,11 @@ html(lang="ru-Ru")
                             a(class=page == 'Главная' ? "link-spy":"" href=page == 'Главная' ?"#feedbackSection":"index.html#feedbackSection") Отзывы
                         li.nav__item
                             a(class=page == 'Главная' ? "link-spy":"" href=page == 'Главная' ?"#contactSection":"index.html#contactSection") Контакты
+                        li.nav__item.nav__working-hours.working-hours
+                                span.working-hours__item.working-hours__item_b Режим работы:
+                                span.working-hours__item с 9:00 до 18:00 (Пн-Пт),
+                                span.working-hours__item с 10:00 до 15:00 (Сб-Вс)
+
 
             //if page == 'Главная'
             //    header.header
